docs: 修复 Ubuntu/Windows 打包文档和脚本中的问题
主要修复:
1. 移除错误的 dpkg-deb 安装命令（已预装在 dpkg 中）
2. 添加 JDK 环境检测和 JavaFX 模块检测
3. 修复 Spring Boot 2.x 启动类路径（org.springframework.boot.loader.JarLauncher）
4. 添加 --print-module-path 不可用的替代方案
5. 更新 Ubuntu 文档，添加 BellSoft Liberica JDK 安装说明

修复的文件:
- packaging/PACKAGING_UBUNTU.md
- packaging/PACKAGING_WINDOWS.md
- packaging/package-ubuntu.sh
- packaging/package-windows.ps1

测试: 已在 Ubuntu 24.04 + BellSoft JDK 21 上验证打包成功